--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ matrix:
 before_script:
   - composer self-update
   - composer install --no-interaction --prefer-source
-  - bash tests/bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
+  - bash ./tests/bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
 
 script:
   - phpunit -c ./tests/config/phpunit.xml
