implementing new schema

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ env:
 matrix:
   include:
     - php: 5.3
-      env: WP_VERSION=latest WP_MULTISITE=1
+      env: WP_VERSION=latest WP_MULTISITE=1 CODACY_PROJECT_TOKEN=1cdfb91afc80407e99fffe8d092ab628
 
 before_script:
   - composer self-update
